# swagger/swagger.json
@@ -188,179 +188,6 @@
                 }
             }
         },
-        "/institucion_enfasis/": {
-            "get": {
-                "tags": [
-                    "institucion_enfasis"
-                ],
-                "description": "get InstitucionEnfasis",
-                "operationId": "InstitucionEnfasisController.Get All",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "query",
-                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "fields",
-                        "description": "Fields returned. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "sortby",
-                        "description": "Sorted-by fields. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "order",
-                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "limit",
-                        "description": "Limit the size of result set. Must be an integer",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "offset",
-                        "description": "Start position of result set. Must be an integer",
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.InstitucionEnfasis"
-                        }
-                    },
-                    "404": {
-                        "description": "not found resource"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "institucion_enfasis"
-                ],
-                "description": "create InstitucionEnfasis",
-                "operationId": "InstitucionEnfasisController.Post",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for InstitucionEnfasis content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.InstitucionEnfasis"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "{int} models.InstitucionEnfasis"
-                    },
-                    "400": {
-                        "description": "the request contains incorrect syntax"
-                    }
-                }
-            }
-        },
-        "/institucion_enfasis/{id}": {
-            "get": {
-                "tags": [
-                    "institucion_enfasis"
-                ],
-                "description": "get InstitucionEnfasis by id",
-                "operationId": "InstitucionEnfasisController.Get One",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.InstitucionEnfasis"
-                        }
-                    },
-                    "404": {
-                        "description": "not found resource"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "institucion_enfasis"
-                ],
-                "description": "update the InstitucionEnfasis",
-                "operationId": "InstitucionEnfasisController.Put",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to update",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for InstitucionEnfasis content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.InstitucionEnfasis"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.InstitucionEnfasis"
-                        }
-                    },
-                    "400": {
-                        "description": "the request contains incorrect syntax"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "institucion_enfasis"
-                ],
-                "description": "delete the InstitucionEnfasis",
-                "operationId": "InstitucionEnfasisController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} delete success!"
-                    },
-                    "404": {
-                        "description": "not found resource"
-                    }
-                }
-            }
-        },
         "/metodologia/": {
             "get": {
                 "tags": [
@@ -688,6 +515,179 @@
                 ],
                 "description": "delete the NivelFormacion",
                 "operationId": "NivelFormacionController.Delete",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            }
+        },
+        "/proyecto_academico_enfasis/": {
+            "get": {
+                "tags": [
+                    "proyecto_academico_enfasis"
+                ],
+                "description": "get ProyectoAcademicoEnfasis",
+                "operationId": "ProyectoAcademicoEnfasisController.Get All",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.ProyectoAcademicoEnfasis"
+                        }
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "proyecto_academico_enfasis"
+                ],
+                "description": "create ProyectoAcademicoEnfasis",
+                "operationId": "ProyectoAcademicoEnfasisController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for ProyectoAcademicoEnfasis content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ProyectoAcademicoEnfasis"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.ProyectoAcademicoEnfasis"
+                    },
+                    "400": {
+                        "description": "the request contains incorrect syntax"
+                    }
+                }
+            }
+        },
+        "/proyecto_academico_enfasis/{id}": {
+            "get": {
+                "tags": [
+                    "proyecto_academico_enfasis"
+                ],
+                "description": "get ProyectoAcademicoEnfasis by id",
+                "operationId": "ProyectoAcademicoEnfasisController.Get One",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.ProyectoAcademicoEnfasis"
+                        }
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "proyecto_academico_enfasis"
+                ],
+                "description": "update the ProyectoAcademicoEnfasis",
+                "operationId": "ProyectoAcademicoEnfasisController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for ProyectoAcademicoEnfasis content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ProyectoAcademicoEnfasis"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.ProyectoAcademicoEnfasis"
+                        }
+                    },
+                    "400": {
+                        "description": "the request contains incorrect syntax"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "proyecto_academico_enfasis"
+                ],
+                "description": "delete the ProyectoAcademicoEnfasis",
+                "operationId": "ProyectoAcademicoEnfasisController.Delete",
                 "parameters": [
                     {
                         "in": "path",
@@ -1781,33 +1781,6 @@
                 }
             }
         },
-        "models.InstitucionEnfasis": {
-            "title": "InstitucionEnfasis",
-            "type": "object",
-            "properties": {
-                "Activo": {
-                    "type": "boolean"
-                },
-                "EnfasisId": {
-                    "$ref": "#/definitions/models.Enfasis"
-                },
-                "FechaCreacion": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "FechaModificacion": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "Id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "ProyectoAcademicoInstitucionId": {
-                    "$ref": "#/definitions/models.ProyectoAcademicoInstitucion"
-                }
-            }
-        },
         "models.Metodologia": {
             "title": "Metodologia",
             "type": "object",
@@ -1876,6 +1849,33 @@
                 }
             }
         },
+        "models.ProyectoAcademicoEnfasis": {
+            "title": "ProyectoAcademicoEnfasis",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "EnfasisId": {
+                    "$ref": "#/definitions/models.Enfasis"
+                },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "ProyectoAcademicoInstitucionId": {
+                    "$ref": "#/definitions/models.ProyectoAcademicoInstitucion"
+                }
+            }
+        },
         "models.ProyectoAcademicoInstitucion": {
             "title": "ProyectoAcademicoInstitucion",
             "type": "object",
@@ -1883,9 +1883,8 @@
                 "Activo": {
                     "type": "boolean"
                 },
-                "AnoActoAdministrativoId": {
-                    "type": "integer",
-                    "format": "int64"
+                "AnoActoAdministrativo": {
+                    "type": "string"
                 },
                 "AreaConocimientoId": {
                     "type": "integer",
@@ -2005,9 +2004,8 @@
                 "Activo": {
                     "type": "boolean"
                 },
-                "AnoActoAdministrativoId": {
-                    "type": "integer",
-                    "format": "int64"
+                "AnoActoAdministrativo": {
+                    "type": "string"
                 },
                 "EnlaceActo": {
                     "type": "string"
@@ -2167,8 +2165,8 @@
             "description": "EnfasisController operations for Enfasis\n"
         },
         {
-            "name": "institucion_enfasis",
-            "description": "InstitucionEnfasisController operations for InstitucionEnfasis\n"
+            "name": "proyecto_academico_enfasis",
+            "description": "ProyectoAcademicoEnfasisController operations for ProyectoAcademicoEnfasis\n"
         },
         {
             "name": "tipo_registro",
